fix(styles): link text wrap issue

--- a/src/styles/typography.scss
+++ b/src/styles/typography.scss
@@ -64,3 +64,7 @@ a {
 .heading-caption {
   font-size: 1.5em;
 }
+
+a {
+  word-break: break-word;
+}
